<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!--  Label -->
	<string name="app_name">PencatatKeuangan</string><string name="fund_source">Fund Source</string>
 	<string name="fund_desc">Fund Destination</string>
 	<string name="exp_category_prompt">Choose Expense Category</string>
 	<string name="inc_category_prompt">Choose Income Category</string>
 	<string name="exp_category">Expense Category</string>
 	<string name="inc_category">Income Category</string>
 	<string name="exp_category_detail">Expense Category Detail</string>
 	<string name="inc_category_detail">Income Category Detail</string>
 	<string name="config_detail">Configuration Detail</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Expense Tracker</string>
    <string name="type_prompt">Choose Type</string>
    <string name="category_prompt">Choose Category</string>
    <string name="date_input">Transaction Date</string>
    <string name="date_from">From</string>
    <string name="date_to">To</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="trans_hist">Transaction History</string>
    <string name="expense_cat">Category</string>
    <string name="balance">Balance</string>
    <string name="transaction">Transaction</string>
    
    <string name="expense_type">Type</string>
    <string name="show_transaction">Show Transaction</string>
    <string name="mustNotEmpty">Field Must be Filled in</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="filename_textview">Filename:</string>
    
    <string name="total_expense">Total Expenses :&#160;</string>
    <string name="total_income">Total Incomes :&#160;</string>
    <string name="total_balance">Total Balance</string>
 	<string name="total_balance_saving">Total Balance Bank Saving</string>
 	<string name="total_balance_cash">Total Balance Cash</string>
 	<string name="total_category">Total Balance %1$s</string>
 	<string name="delimiter_doubledot">&#160;:&#160;</string>
    <string name="C">Cash</string>
    <string name="T">Bank Saving</string>
    <string name="transaction_detail">Transaction Details</string>
    <string name="D">Income</string>
    <string name="K">Expense</string>
    <string name="searchTransaction">Search Transaction</string>
    <string name="searchCriteria">Search Criteria</string>
    <string name="cur_dir">Cur Dir &#160;</string>
    <string name="transfer_from">Transfer from</string>
 	<string name="transfer_to">Transfer to</string>
 	<string name="transfer">Transfer</string>
 	<string name="weekly_budget">Weekly Budget</string>
 	<string name="monthly_budget">Monthly Budget</string>
 	
 	 	<string name="setting">Setting</string>
 	<string name="report">Report</string>
 	<string name="about">About</string>
 	<string name="today_text">Today</string>
 	<string name="finance_tips">Finance Tips</string>
 	<string name="finance_tips_good">Your finance condition is good</string>
 	<string name="finance_tips_warning">Your finance condition is currently okay, only spend on priority needs</string>
 	<string name="finance_tips_critical">Your finance condition is bad, stop spending on not needed items</string>
    <!-- Display -->
 	<string name="date_from_display">From :&#160;</string>
 	<string name="date_to_display">To :&#160;</string>
 	<string name="expense_cat_display">Category :&#160;</string>
    <string name="expense_category_setting">Expense Category Setting</string>
 	<string name="enable_delete_transaction_">Enable Delete Transaction ?</string>
 	<string name="enable_deleting_transaction_summary">Enable deleting transaction</string>
 	<string name="define_good_finance_condition">Define good finance condition</string>
 	<string name="set_tips_for_good_finance_condition">Set Tips for good Finance Condition</string>
 	<string name="define_amount_limit_good_finance_condition">Define amount limit good finance condition</string>
 	<string name="set_limit_for_good_finance_condition">Set Limit for good Finance Condition</string>
 	<string name="define_moderate_finance_condition">Define moderate finance condition</string>
 	<string name="set_tips_for_moderate_finance_condition">Set Tips for Moderate Finance Condition</string>
 	<string name="define_the_amount_limit_moderate_finance_condition">Define the amount limit moderate finance condition</string>
 	<string name="set_limit_for_moderate_finance_condition">Set Limit for moderate Finance Condition</string>
 	<string name="define_bad_finance_condition">Define bad finance condition</string>
 	<string name="set_tips_for_bad_finance_condition">Set Tips for bad Finance Condition</string>
 	<string name="define_what_currency_to_be_used">Define what currency to be used</string>
 	<string name="currency_setting">Currency Setting</string>
 	<string name="transaction_category">Transaction Kategori</string>
 	<string name="weekly_report">Weekly</string>
 	<string name="monthly_report">Monthly</string>
 	<string name="yearly_report">Yearly</string>
 	<string name="week_prefix">Week</string>
 	<string name="not_set">Not set</string>
 	<string name="over_budget_expense">%1$s Expenses has been over budget for month %2$s. Expense amount %3$s, Monthly Budget %4$s</string>
 	<string name="okay_budget_expense">%1$s Expenses still good for month %2$s. Expense amount %3$s, Monthly Budget %4$s</string>
 	<string name="notset_budget_expense">%1$s Expenses for month %2$s is %3$s, Monthly Budget %4$s, recommended to add budget in expense category</string>
    <!-- Process Message -->
    <string name="expense_should_be_lower_than_balance">Transaction amount must be lower than %1$s balance</string>
    <string name="transaction_success">Transaction Id %1$s Successfully added.</string>
    <string name="file_saved">%1$s has been successfully created.</string>
    <string name="allFieldValidation">All field required, please recheck</string>
    <string name="emptyTextValidation">%1$s required, must not empty!</string>
    <string name="balance_empty_validation">Zero balance on &#160;%1$s&#160;. You must process income first</string>
	<string name="transfer_success">Successfully transferred from &#160;%1$s&#160; to &#160;%2$s&#160; with amount &#160;%3$s</string>
	<string name="transfer_invalid">Transfer from and Transfer to should have different category</string>
	<string name="add_config_success">Category &#160;%1$s&#160; has been successfully added</string>
	<string name="mod_config_success">Category &#160;%1$s&#160; has been successfully modified</string>
 	<string name="add_config_fails">Category &#160;%1$s&#160; failed to be added</string>
 	<string name="mod_config_fails">Category &#160;%1$s&#160; failed to be modified</string>
 	<string name="add_success">%1$s&#160; has been successfully added</string>
	<string name="mod_success">%1$s&#160; has been successfully modified</string>
 	<string name="add_fails">%1$s&#160; failed to be added</string>
 	<string name="mod_fails">%1$s&#160; failed to be modified</string>
 		<string name="del_success">%1$s&#160; has been successfully deleted</string>
 	<string name="del_fails">%1$s&#160; failed to be deleted</string>
 	<string name="cat_code_required">Code required and must be 3 characters</string>
 	<string name="loc_desc_required">Local Description Required</string>
 	<string name="en_desc_required">English Description Required</string>
 	<string name="over_budget_title">Over Budget Confirmation</string>
 	<string name="over_budget_confirmation">The amount of expense will cause over budget to your %1s monthly budget, do you want to continue?</string>
	<string name="period">Period</string>
	<!--  button name -->
	<string name="btn_submit">Process</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_close">Close</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_yes">Yes</string>
 	<string name="btn_no">No</string>
 	<string name="btn_show">Show</string>
 	<string name="btn_show_graph">Show in Chart</string>
 	<string name="btn_show_list">Show in List</string>
 	<string name="btn_add">Add</string>
 	<string name="btn_mod">Modify</string>
 	<string name="btn_open">Open</string>
    
    <!--  configuration -->
 	<string name="preflang">en_US</string>
 	 	<string name="expense_category_list">Expense Category List</string>
 	<string name="income_category_list">Income Category List</string>
 	<string name="configuration_list">Configuration List</string>
 	<string name="add">Add</string>
 	<string name="en_desc">English Desc</string>
 	<string name="loc_desc">Local Desc</string>
 	<string name="code">Code</string>
 	<string name="diff">Difference :&#160;</string>
 	<string name="status">Status</string>
 	<string name="due_date">Due Date</string>
 	<string name="receivable">Receivable</string>
 	<string name="payable">Payable</string>
 	<string name="list_of_payable">List of Payable</string>
 	<string name="list_of_receivable">List of Receivable</string>
 	<string name="income_per_category">Income Per Category</string>
 	<string name="expense_per_category">Expense Per Category</string>
 	<string name="summary">Summary</string>
 	<string name="amount_paid">Amount paid</string>
 	<string name="mark_complete">Mark as Complete</string>
 	<string name="mark_as_transaction">Mark as Transaction?</string>
 	<string name="other_than_cash">Others</string>
 	<string name="config_record_exist">Record with code %1$s exist, please use other code</string>
 	<string name="payable_payment_list">Payable Payment List</string>
 	<string name="receivable_payment_list">Receivable Payment List</string>
 	<string name="payable_total">Payable %1$s Total : </string>
 	<string name="receivable_total">Receivable %1$s Total : </string>
 	<string name="payable_payment">Payable Payment</string>
 	<string name="receivable_payment">Receivable Payment</string>
 	<string name="payment_complete">Complete</string>
 	<string name="payment_not_complete">Not Complete</string>
 	<string name="fund_type">Fund Type</string>
 	<string name="application_language_preference">Application Language Preference</string>
 	<string name="language_preference">Language preference</string>
 	<string name="make_the_app_password_protected">Make The App Password protected</string>
 	<string name="enable_password">Enable Password</string>
 	<string name="set_password">Set Password</string>
 	<string name="restore_db">Restore DB</string>
 	<string name="backup_db">Backup DB</string>
 	<string name="restore_db_success">Successfully restore Pencatat Keuangan database from %1s</string>
 	<string name="export_db_success">Successfully backup Pencatat Keuangan database to %1s</string>
 	<string name="db_export_fail">Backup database failed, Please check sdcard/ file is valid is valid</string>
 	<string name="db_restore_fail">Restore database failed, Please check sdcard/ file is valid is valid</string>
 	<string name="db_restore_confirmation">Restore will overwrite your current database with %1s, Are you sure to continue?</string>
</resources>