<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     >

    <PreferenceCategory
        android:key="app_setting"
        android:title="Application Setting" >
        <ListPreference
            android:defaultValue="inID"
            android:entries="@array/localeSetting"
            android:entryValues="@array/localeSettingValues"
            android:key="currency"
            android:persistent="true"
            android:summary="@string/define_what_currency_to_be_used"
            android:title="@string/currency_setting" />
        
         <ListPreference
            android:defaultValue="in_ID"
            android:entries="@array/localeSetup"
            android:entryValues="@array/localeSetupValues"
            android:key="preflang"
            android:persistent="true"
            android:summary="@string/application_language_preference"
            android:title="@string/language_preference" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="user_setting"
        android:title="User Setting" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_delete"
            android:summary="@string/enable_deleting_transaction_summary"
            android:title="@string/enable_delete_transaction_" >
        </CheckBoxPreference>
         <CheckBoxPreference
            android:defaultValue="false"
            android:key="active_password"
            android:summary="@string/make_the_app_password_protected"
            android:title="@string/enable_password" >
        </CheckBoxPreference>
        <EditTextPreference
            android:defaultValue="1234"
            android:key="password"
            android:summary="@string/set_password"
            android:title="@string/set_password"
            android:inputType="textVisiblePassword" />

        <EditTextPreference
            android:defaultValue="@string/finance_tips_good"
            android:key="finance_tips_good"
            android:summary="@string/define_good_finance_condition"
            android:title="@string/set_tips_for_good_finance_condition" />
        <EditTextPreference
            android:defaultValue="1000000"
            android:key="finance_tips_good_limit"
            android:inputType="number"
            android:summary="@string/define_amount_limit_good_finance_condition"
            android:title="@string/set_limit_for_good_finance_condition" />
        <EditTextPreference
            android:defaultValue="@string/finance_tips_warning"
            android:key="finance_tips_moderate"
            android:summary="@string/define_moderate_finance_condition"
            android:title="@string/set_tips_for_moderate_finance_condition" />
        <EditTextPreference
            android:defaultValue="100000"
            android:key="finance_tips_moderate_limit"
            android:inputType="number"
            android:summary="@string/define_the_amount_limit_moderate_finance_condition"
            android:title="@string/set_limit_for_moderate_finance_condition" />
        <EditTextPreference
            android:defaultValue="@string/finance_tips_critical"
            android:key="finance_tips_bad"
            android:summary="@string/define_bad_finance_condition"
            android:title="@string/set_tips_for_bad_finance_condition" />
    </PreferenceCategory>
    

</PreferenceScreen>