<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:background="@drawable/list_selector"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/detailContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/detailCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dip"
            android:text="@string/inc_category"
            android:textColor="#343434"
            android:textSize="@dimen/smallSize" />

        <LinearLayout
            android:id="@+id/detailContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/detailMonthlyBudgetExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dip"
                android:text="@string/monthly_budget"
                android:textColor="#343434"
                android:textSize="@dimen/smallSize" />

            <TextView
                android:id="@+id/detailMonthlyBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dip"
                android:text="@string/income"
                android:textColor="#343434"
                android:textSize="@dimen/smallSize" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/amountDetailCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="2dip"
        android:padding="5dp"
        android:text="@string/income"
        android:textColor="#343434"
        android:textSize="@dimen/textSize"
        android:textStyle="bold" />

</LinearLayout>